2004-03-17 multipath-tools-0.1.4
	* multipath clean up
		* split default hw table in hwtable.h
		* split grouping policies in pgpolocies.c
		* pass *mp to setup_map instead of mp[]+index
	* ensure defhwtable is used if /etc/multipath.conf is buggy
	* hwtable is not global anymore
	* unlink the runfile in various error paths
2004-03-13 multipath-tools-0.1.3
	* multipath config tool now has a config file parser
	  (did I say I make the ugliest parsers ?)
	* example multipath.conf to put in /etc (manualy)
2004-03-12 multipath-tools-0.1.2
	* detach the per devmap waiter threads
	* set the thread stack size to lower limits
	  (VSZ down to 4MB from 85 MB here)
2004-03-06 multipath-tools-0.1.1
	* include dlist.h in multipath main.c (PM Hahn)
	* typo in hotplug script (PM Hahn)
	* pass -9 opt to gzip for manpages (PM Hahn)
2004-03-05 multipath-tools-0.1.0
	* add the group_by_tur policy
	* add the multipathd daemon for pathchecking & DM hot-reconfig
	* multipath doesn't run twice
	* massive cleanups, and code restructuring
	* Avoid Kernel Bug when passing too small a buffer in do_inq()
	* Sync with 2.6.3-udm4 target synthax (no more PG prio)
2004-02-21 multipath-018
	* From the Debian SID inclusion review (Philipp Matthias Hahn)
		* use DESTDIR install prefix in the Makefile
		* add man pages for devmap_name & multipath
		* correct libsysfs.h includes
		* fork the hotplug script in its own shell
	* Sync with the kernel device mapper code as of 2.6.3-udm3
	  ie. Remove the test interval parameter and its uses
	* Remove superfluous scsi parameter passed from hotplug
	* Add the man pages to the [un]install targets
2004-02-17 multipath-017
	* remove the restrictive -f flag.
	  Introduce a more generic "-m iopolicy" one.
	* remove useless "int with_sysfs" in env struct 
2004-02-04 multipath-016
	* add a GROUP_BY_SERIAL flag. This should be useful for
	  controlers that activate they spare paths on simple IO
	  submition with a penalty. The StorageWorks HW defaults to